# todo-rust-api

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2024-09-08-172643_create_to_do_items/: down.sql  up.sql
src/: main.rs  schema.rs
src/configuration/: config.rs  database.rs  mod.rs  schema.rs
src/enums/: item_types.rs  mod.rs  task_status.rs
src/handlers/: mod.rs
src/handlers/to_do_handler/: mod.rs  to_do_handler.rs
src/models/: base.rs  done.rs  jwtoken.rs  mod.rs  pending.rs
src/models/entities/item/: item.rs  new_item.rs
src/models/responses/: get_item_response.rs  mod.rs  summary_item_response.rs
src/models/traits/: create.rs  delete.rs  edit.rs
src/services/: mod.rs  to_do_service.rs
