[package]
name = "to_do_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde_json = "1.0.59"
serde = { version = "1.0.136", features = ["derive"] }
actix-service = "2.0.2"
futures = "0.3.21"
actix-cors = "0.6.1"
diesel = { version = "2.2.0", features = ["postgres","chrono","r2d2"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"
libsqlite3-sys = { version = "0.18", features = ["bundled"]}
chrono = {version = "0.4.19", features = ["serde"]}
serde_yaml = "0.8.23"
lazy_static = "1.4.0"
bcrypt = "0.13.0"
uuid = {version = "1.0.0", features = ["serde", "v4"]}